Fix error message text wrapping

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -121,6 +121,7 @@ button.delete:hover {
 .error pre {
   width: 100%;
   color: red;
+  white-space: pre-wrap;
 }
 .error h1,
 .error p {
